css/custom.css
.navbarTitle
{
    font-size: 32px;
    color : white;

}

.navbarRightElements
{
    margin-right: 70px;
}

.navbarLeftElements
{
    margin-left : 50px;
}



section
{
    margin: auto;
    width: 100%;
    height: auto;
}

.CenteredSection
 {
     margin: auto;
     width: 70%;
     padding-bottom: 80px;
 }

.CenteredSection-noPad
{
    margin: auto;
    width: 70%;
}

.backgroundVideo
{
    position: center;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: 100%;
    height: 100%;
}

.navbarName *
{
    font-size: 24px

}

.backgroundImg {
    position: relative;
}

.centeredNavText
{
    position: absolute;
    color :white;
    font-size: 22px;
    width: 100%;
    right: 50px;
    bottom: -15px;
    text-align: center;
}

.ProjectSection
{
    margin-top: 100px;
    width: 100%;
    height: auto;
}

.sectionBackground
{
 background-size: cover;
    color: white;
    overflow:visible;
    background-repeat: no-repeat;
    background-position: center top;
    height: 100%;
}

.navDiv
{

}

p
{
    font-size: 20px;
}

